--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": ["example",
+    "heroku"],
   "author": "",
   "license": "ISC",
+  
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1"
   },
   "devDependencies": {
